@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.helidon.applications</groupId>
         <artifactId>helidon-mp</artifactId>
-        <version>2.0.0-RC1</version>
+        <version>2.0.1</version>
         <relativePath />
     </parent>
 
@@ -18,7 +18,7 @@
         <mainClass>oracle.demo.Main</mainClass>
         <docker.repo.prefix></docker.repo.prefix>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <grpc.version>1.26.0</grpc.version>
+        <grpc.version>1.30.2</grpc.version>
     </properties>
 
     <profiles>
@@ -213,8 +213,8 @@
         <!--
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc8</artifactId>
-            <version>18.3.0.0</version>
+            <artifactId>ojdbc10</artifactId>
+            <version>19.6.0.0</version>
         </dependency>
         -->
 
@@ -223,7 +223,7 @@
         <dependency>
             <groupId>com.oracle.database.nls</groupId>
             <artifactId>orai18n</artifactId>
-            <version>18.3.0.0</version>
+            <version>19.6.0.0</version>
         </dependency>
         -->
 
@@ -232,12 +232,12 @@
         <dependency>
             <groupId>com.oracle.database.xml</groupId>
             <artifactId>xdb6</artifactId>
-            <version>18.3.0.0</version>
+            <version>19.6.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.oracle.database.xml</groupId>
             <artifactId>xmlparserv2</artifactId>
-            <version>18.3.0.0</version>
+            <version>19.6.0.0</version>
         </dependency>
         -->
 
@@ -246,17 +246,17 @@
         <dependency>
             <groupId>com.oracle.database.security</groupId>
             <artifactId>oraclepki</artifactId>
-            <version>18.3.0.0</version>
+            <version>19.6.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.oracle.database.security</groupId>
             <artifactId>osdt_cert</artifactId>
-            <version>18.3.0.0</version>
+            <version>19.6.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.oracle.database.security</groupId>
             <artifactId>osdt_core</artifactId>
-            <version>18.3.0.0</version>
+            <version>19.6.0.0</version>
         </dependency>
         -->
 
@@ -265,12 +265,12 @@
         <dependency>
             <groupId>com.oracle.database.ha</groupId>
             <artifactId>simplefan</artifactId>
-            <version>18.3.0.0</version>
+            <version>19.6.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.oracle.database.ha</groupId>
             <artifactId>ons</artifactId>
-            <version>18.3.0.0</version>
+            <version>19.6.0.0</version>
         </dependency>
         -->
 
@@ -335,7 +335,6 @@
                 <artifactId>eclipselink-maven-plugin</artifactId>
                 <version>2.7.1.1</version>
                 <dependencies>
-
                     <dependency>
                         <groupId>javax.annotation</groupId>
                         <artifactId>javax.annotation-api</artifactId>
@@ -346,14 +345,6 @@
                         <artifactId>jaxb-api</artifactId>
                         <version>2.3.0</version>
                     </dependency>
-
-                    <!-- workaround for Java 11 -->
-                    <dependency>
-                        <groupId>com.google.code.findbugs</groupId>
-                        <artifactId>jsr305</artifactId>
-                        <version>3.0.2</version>
-                    </dependency>
-
                 </dependencies>
                 <executions>
                     <execution>
@@ -410,10 +401,10 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>1.8.0</version>
+                <version>2.4.0</version>
                 <configuration>
                     <from>
-                        <image>openjdk:8-jre-alpine</image>
+                        <image>adoptopenjdk:11-jre-hotspot</image>
                     </from>
                     <to>
                         <!-- image>${docker.repo}</image -->
@@ -436,10 +427,6 @@
                             <jmxFlag>-server</jmxFlag>
                             <jmxFlag>-Djava.awt.headless=true</jmxFlag>
                             <jmxFlag>-XX:+UnlockExperimentalVMOptions</jmxFlag>
-                            <jmxFlag>-XX:+UseCGroupMemoryLimitForHeap</jmxFlag>
-                            <jmxFlag>-XX:InitialRAMFraction=2</jmxFlag>
-                            <jmxFlag>-XX:MinRAMFraction=2</jmxFlag>
-                            <jmxFlag>-XX:MaxRAMFraction=2</jmxFlag>
                             <jmxFlag>-XX:+UseG1GC</jmxFlag>
                             <!-- for oracle jdbc driver-->
                             <jmxFlag>-Doracle.jdbc.fanEnabled=false</jmxFlag>
